# RAGFlowMCP

./: .env.example  .gitignore  Dockerfile.vanna_mcp_server  README.md  docker-compose.vanna_mcp_server.yml  pyproject.toml
src/data_analyst_mcp/: config.py  main.py  server.py  vanna_agent.py  vanna_chat_handler_stream.py  vanna_mcp_server.py  vanna_rich_chunk_adapter.py
src/data_analyst_mcp/client/: __init__.py
src/data_analyst_mcp/client/ragflow_server_api_client/api/retrieval/: __init__.py
src/data_analyst_mcp/client/vanna_server_api_client/: __init__.py
src/data_analyst_mcp/client/vanna_server_api_client/api/chat/: chat_sse_post.py
src/lightrag_mcp/: main.py  server.py
src/lightrag_mcp/client/: __init__.py
src/lightrag_mcp/client/light_rag_server_api_client/: __init__.py
src/lightrag_mcp/client/light_rag_server_api_client/models/: __init__.py  ragflow_retrieval_response.py
src/mcp/: __init__.py  config.py  lightrag_client.py  main.py  server.py
src/mcp/client/: __init__.py
src/mcp/client/ragflow_server_api_client/: ragflow_client.py
src/mcp/client/ragflow_server_api_client/models/: ragflow_retrieval_request.py
src/mcp/client/vanna_server_api_client/: client.py  vanna_client.py
src/mcp/client/vanna_server_api_client/api/: __init__.py
src/mcp/client/vanna_server_api_client/api/chat/: __init__.py
src/mcp/server/: vanna_chat_handler_stream.py  vanna_mcp_server.py
src/raglfow_mcp/: __init__.py  config.py  lightrag_client.py  main.py  server.py
src/raglfow_mcp/client/: __init__.py
tests/: test_vanna_rich_chunk_adapter.py
(+1 files in other folders)
