[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vanna-mcp"
version = "0.1.0"
description = "MCP Server for Vanna with Ragflow retrieval compatibility"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    {name = "shemhamforash", email = "killsterak16@gmail.com"},
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.28.1",
    "pydantic>=2.11",
    "python-dotenv>=1.0.1",
    "attrs>=25.3.0"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.5.0",
    "ruff>=0.11.4"
]

[project.scripts]
raglfow-mcp = "data_analyst_mcp.main:main"
vanna-mcp = "data_analyst_mcp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/data_analyst_mcp"]
